# kuberseni-gitops

./: .editorconfig  .envrc  .gitignore  .mcp.json  .mise.toml  .pre-commit-config.yaml  .prek.toml  .sops.yaml  CLAUDE.md  README.md  adb-debloat.sh  prek.toml
.githooks/: pre-push
.github/: CODEOWNERS  renovate.json5
.github/workflows/: argocd-diff.yaml  create-and-push-oci.yaml  flux-schedule.yaml  invalid-template.yaml  lint.yaml  renovate-schedule.yaml  support.yaml
bootstrapping/: 00-prepare-nodes.yaml  03-create-cluster.yaml  100-run-all.yaml  20-uninstall-cluster.yaml  README.md  inventory.yaml  requirements.yaml  secrets.enc.yaml
bootstrapping/ansible/: 00-run-all.yaml  01-provision-vms.yaml  02-configure-cluster.yaml  02-configure-vms.yaml  03-flux-bootstrap.yaml  03-install-longhorn-dependencies.yaml  04-install-longhorn-dependencies.yaml  05-flux-bootstrap.yaml  06-install-teleport-agents.yaml  20-uninstall-cluster.yaml  flux-bootstrap.yaml  hosts.yaml  inventory.yaml  (+6 more)
docs/: README.md  astro.config.mjs  harvester.md  package-lock.json  package.json  tech-stack.drawio
infra/: .gitignore  Dockerfile  MIGRATION.md  Taskfile.yml  docker-compose.yml  requirements.txt  setup-talos-cluster.sh  start_workflow.py  worker.py
infra/temporal/: Dockerfile  README.md  pyproject.toml  worker.py
infra/temporal/activities/: fake_ops.py  health.py  provisioning.py  talos_ops.py
infra/temporal/workflows/: install.py  main.py  upgrade.py
security/: trivy-generic-scan.sh  trivy-specific-scan.sh
tmpl/: cluster-settings.yaml  gotk-sync.yaml
upgrades/: README.md
(+885 files in other folders)
